# componentProject

./: CMakeLists.txt  crackDetect.cpp  crackDetect.hpp  rotateImage.cpp  rotateImage.hpp  size_measurement.cpp
